<resources>
    <string name="app_name">Washing Machine Interface</string>
    <string name="brand">Whirlpool</string>
    <string name="s_dark_mode">Σκοτεινή Λειτουργία</string>
    <string name="s_light_mode">Φωτεινή Λειτουργία</string>

    <!--activity_main-->
    <string name="s_beginner">ΒΑΣΙΚΗ ΠΛΥΣΗ \n(για αρχάριους)</string>
    <string name="s_advanced">ΠΡΟΣΑΡΜΟΣΜΕΝΗ ΠΛΥΣΗ \n\t(για προχωρημένους)</string>
    <string name="s_help">ΒΟΗΘΕΙΑ</string>
    <string name="s_main_help"><b>⦿</b> \tΑν δεν γνωρίζετε πώς να βάζετε πλυντήριο, πατήστε την 1η επιλογή (για αρχάριους). Η εφαρμογή διαλέγει τα κατάλληλα χαρακτηριστικά για την πλύση σας βάσει των επιλογών σας. Αφήστε τις δύσκολες αποφάσεις στην εφαρμογή! \n<b>⦿</b> \tΔιαφορετικά, πατήστε την 2η επιλογή (για προχωρημένους). Η επιλογή αυτή εμφανίζει όλες τις σύνθετες επιλογές (πχ θερμοκρασία, στροφές) \n<b>⦿</b> \tΑν θέλετε να δείτε τη λίστα με τις αγαπημένες σας πλύσεις, πατήστε ΛΙΣΤΑ ΑΓΑΠΗΜΕΝΩΝ</string>
    <string name="title_favorites_list">ΛΙΣΤΑ ΑΓΑΠΗΜΕΝΩΝ</string>

    <!--activity_beginner_advanced-->
    <string name="s_wool">\tΜάλλινα</string>
    <string name="s_delicate">\tΕυαίσθητα</string>
    <string name="s_synthetic">\tΣυνθετικά</string>
    <string name="s_cotton_mix"><![CDATA[\tΒαμβακερά\n& Ανάμεικτα]]></string>
    <string name="s_mix">\tΑνάμεικτα</string>
    <string name="radio_fabric">Ύφασμα</string>
    <string name="s_30_celc">\t30 ℃</string>
    <string name="s_40_celc">\t40 ℃</string>
    <string name="s_60_celc">\t60 ℃</string>
    <string name="s_70_celc">\t70 ℃</string>
    <string name="s_95_celc">\t95 ℃</string>
    <string name="radio_temp">Θερμοκρασία</string>
    <string name="radio_prewash">Πρόπλυση</string>
    <string name="s_no">\tΌχι</string>
    <string name="s_yes">\tΝαι</string>
    <string name="radio_dry">Στύψιμο</string>
    <string name="s_drainage">\tΑποστράγγιση</string>
    <string name="s_spin">\tΣτροφές</string>
    <string name="radio_rinse">Επιπλέον\nΞέπλυμα</string>
    <string name="title_advanced">Προσαρμοσμένη Πλύση</string>
    <string name="help">Βοήθεια</string>
    <string name="start">Εκκίνηση</string>
    <string name="title_beginner">Βασική Πλύση</string>
    <string name="radio_color">Χρώμα</string>
    <string name="s_white">\tΆσπρα</string>
    <string name="s_dark">\tΣκούρα</string>
    <string name="s_colorful">\tΧρωματιστά</string>
    <string name="radio_dirt">Βρωμιά</string>
    <string name="s_alot">\tΠολύ</string>
    <string name="s_alittle">\tΛίγο</string>
    <string name="radio_allergy">Αλλεργία</string>
    <string name="main_screen">Αρχική Οθόνη</string>
    <string name="s_0rpm">\t 0 στροφές</string>
    <string name="s_600rpm">\t600 στροφές</string>
    <string name="s_1200rpm">\t1200 στροφές</string>
    <string name="s_1000rpm">\t1000 στροφές</string>
    <string name="s_800rpm">\t800 στροφές</string>
    <string name="s_choices_help"><b>⦿</b> \tΓια κάθε μία από τις κατηγορίες που εμφανίζονται διαλέξτε την επιλογή που θέλετε πατώντας πάνω της (ανάβει γαλάζιο φωτάκι)\n<b>⦿</b> \tΜόλις επιλέξετε όλες τις επιλoγές που θέλετε, πατήστε ΕΚΚΙΝΗΣΗ για να ξεκινήσει η πλύση\n<b>⦿</b> \tΑν θέλετε, μπορείτε να αποθηκεύσετε τις επιλογές σας πατώντας την καρδούλα. Οι αποθηκευμένες επιλογές σας βρίσκονται στην Λίστα Αγαπημένων στην αρχική οθόνη\n<b>⦿</b> \tΑν θέλετε να πάτε στην προηγούμενη οθόνη πατήστε ΠΙΣΩ</string>

    <!--activity_last_screen-->
    <string name="s_functioning">Σε Λειτουργία</string>
    <string name="s_on_pause">Σε Παύση</string>
    <string name="s_program">Πρόγραμμα Πλυντηρίου: </string>
    <string name="s_test_program">ΠΡΟΓΡ ΤΕΣΤ</string>
    <string name="s_remaining_time">Συνολικός Χρόνος που απομένει</string>
    <string name="s_main_washing">Κύρια πλύση</string>
    <string name="s_pause">ΠΑΥΣΗ</string>
    <string name="s_start">ΕΚΚΙΝΗΣΗ</string>
    <string name="s_stop">ΔΙΑΚΟΠΗ</string>
    <string name="graphic_washing_machine">Γραφικό πλυντηρίου</string>

    <!--popup_last_screen-->
    <string name="s_stop_washing">Θέλετε να σταματήσετε την πλύση;</string>
    <string name="b_yes_stop">Ναι</string>
    <string name="b_no_continue">Όχι</string>
    <string name="washing">Πλύσιμο</string>

    <!--activity_favorites-->
    <string name="favorite">Αγαπημένο</string>
    <string name="delete">Διαγραφή</string>
    <string name="no_saved">Δεν έχετε αποθηκευμένες πλύσεις αυτή τη στιγμή</string>
    <string name="favorites_title">Λίστα Αγαπημένων</string>
    <string name="s_start_washing">Θέλετε να ξεκινήσετε την πλύση;</string>
    <string name="s_favorites_help"><b>⦿</b> \tΕδώ είναι η λίστα με τις αγαπημένες σας πλύσεις! Κάθε πλύση αναγράφει τις επιλογές που έχετε κάνει\n<b>⦿</b> \tΑν θέλετε να εκκινήσετε κάποια πλύση απλώς πατήστε πάνω της\n<b>⦿</b> \tΑν θέλετε να διαγράψετε κάποια πλύση, πατήστε τον κάδο της πλύσης\n<b>⦿</b> \tΕίτε θελήσετε να εκκινήσετε μία πλύση, είτε να τη διαγράψετε, σας ζητείται να επιβεβαιώσετε την επιλογή σας, οπότε μην ανησυχείτε αν πατήσετε κάτι καταλάθος!\n<b>⦿</b> \tΑν θέλετε να πάτε στην προηγούμενη οθόνη πατήστε ΠΙΣΩ</string>
    <string name="s_delete_item">Θέλετε να διαγράψετε το αγαπημένο;</string>
    <string name="graphic_laundry">Γραφικό ρούχων</string>
    <string name="s_back">ΠΙΣΩ</string>

<!--    popup_detergent_reminder-->
    <string name="detergent_reminder">Detergent Reminder</string>
    <string name="b_ready">Ξεκίνα!</string>
    <string name="s_reminder">Μην ξεχάσετε!</string>

<!--    Toast messages-->
    <string name="add_item">Οι ρυθμίσεις αποθηκεύτηκαν στη Λίστα Αγαπημένων</string>
    <string name="remove_item">Οι ρυθμίσεις αφαιρέθηκαν από τη Λίστα Αγαπημένων</string>
    <string name="s_finish">Το πλυντήριο τελείωσε!</string>
    <string name="s_ok">Εντάξει</string>

</resources>