<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/item_layout"
    android:gravity="center_horizontal">

    <ToggleButton
        android:id="@+id/favorite_toggle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/favorite_button"
        android:textOn=""
        android:textOff=""
        android:checked="false" />

    <RelativeLayout
        android:id="@+id/prewash_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/prewash_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/radio_prewash"/>

        <TextView
            android:id="@+id/prewash_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/prewash_title"
            android:text="@string/s_yes"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/program_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/program_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/radio_fabric" />

        <TextView
            android:id="@+id/program_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/program_title"
            android:text="@string/s_wool"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/temp_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/temp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/radio_temp" />

        <TextView
            android:id="@+id/temp_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/temp_title"
            android:text="@string/s_30_celc"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dry_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dry_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/radio_dry" />

        <TextView
            android:id="@+id/dry_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/dry_title"
            android:text="@string/s_600rpm"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rinse_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/rinse_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/radio_rinse" />

        <TextView
            android:id="@+id/rinse_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/rinse_title"
            android:text="@string/s_yes"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/color_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/color_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/radio_color" />

        <TextView
            android:id="@+id/color_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/color_title"
            android:text="@string/s_dark"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dirt_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dirt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/radio_dirt" />

        <TextView
            android:id="@+id/dirt_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/dirt_title"
            android:text="@string/s_yes"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/allergy_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/allergy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/radio_allergy" />

        <TextView
            android:id="@+id/allergy_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/allergy_title"
            android:text="@string/s_yes"/>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/rinse_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_delete"
        android:contentDescription="Delete"/>

</LinearLayout>